--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,7 @@
 services:
- minecraft:
-   image: itzg/minecraft-server
-   ports:
-     - "25565:25565"
-   environment:
-     EULA: "TRUE"
-   deploy:
-     resources:
-       limits:
-         memory: 1.0G
-   volumes:
-     - "~/minecraft_data:/data"
+  web-django: 
+    build:
+      context: app
+      target: builder
+    ports: 
+      - '90:8000'
